--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -286,3 +286,10 @@
 .marker-red {
   background-image: url('../img/marker-red-x2.png');
 }
+
+#gauge {
+  background-color: hsl( 220, 100, 90 );
+  position: absolute;
+  top: 0;
+  right: 0;
+}
