--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -33,6 +33,10 @@
 
 // DEV STYLES - refactor later
 //===============================================================================
+body{
+  background-color: $ink-secondary;
+}
+
 .map-frame {
   position: absolute;
 }
